// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Step3DraftReview Component Snapshots should match snapshot for completed state 1`] = `
<div>
  <div
    class="space-y-4 h-full flex flex-col"
  >
    <div>
      <h2
        class="text-2xl font-bold mb-2 text-gray-900"
      >
        Review Generated Draft
      </h2>
      <p
        class="text-gray-600"
      >
        Review and edit the generated draft. You can save it to your case files when ready.
      </p>
    </div>
    <div
      class="flex-1 min-h-[400px]"
    >
      <textarea
        class="w-full h-full px-4 py-3 rounded-lg border font-mono text-sm border-gray-200 bg-white text-gray-900 focus:ring-2 focus:ring-blue-500 focus:border-transparent placeholder:text-slate-400 dark:placeholder:text-slate-500"
        placeholder="Draft content will appear here"
      >
        MOTION TO DISMISS

Comes now the Defendant, by and through undersigned counsel, and moves this Honorable Court to dismiss the Plaintiff's Complaint for failure to state a claim upon which relief can be granted.

LEGAL ARGUMENT

1. The Complaint fails to allege sufficient facts to support a claim for breach of contract.
2. The statute of limitations has expired on all claims asserted.

WHEREFORE, Defendant respectfully requests that this Court grant this Motion and dismiss the Complaint with prejudice.
      </textarea>
    </div>
    <div
      class="p-3 rounded-lg border bg-green-50 dark:bg-green-950/20 border-green-200 dark:border-green-800"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="w-5 h-5 text-green-600 dark:text-green-400"
          data-testid="icon-check-circle"
        />
        <span
          class="text-sm font-medium text-gray-900"
        >
          Draft complete! 
          506
           characters generated.
        </span>
      </div>
    </div>
    <div
      class="flex gap-3 pt-4 border-t border-gray-200"
    >
      <button
        class="px-4 py-2 rounded-lg border transition-colors border-gray-200 bg-gray-50 hover:bg-slate-100 dark:hover:bg-slate-800 flex items-center gap-2"
      >
        <span
          class="w-4 h-4"
          data-testid="icon-copy"
        />
        <span
          class="text-gray-900"
        >
          Copy
        </span>
      </button>
      <button
        class="px-4 py-2 rounded-lg border transition-colors border-gray-200 bg-gray-50 hover:bg-slate-100 dark:hover:bg-slate-800 flex items-center gap-2"
      >
        <span
          class="w-4 h-4"
          data-testid="icon-download"
        />
        <span
          class="text-gray-900"
        >
          Download
        </span>
      </button>
      <button
        class="flex-1 px-6 py-2 rounded-lg font-semibold transition-all flex items-center justify-center gap-2 bg-green-600 hover:bg-green-700 text-white shadow-md hover:shadow-lg"
      >
        <span
          class="w-5 h-5"
          data-testid="icon-save"
        />
        Save to Case Files
      </button>
    </div>
  </div>
</div>
`;

exports[`Step3DraftReview Component Snapshots should match snapshot for empty state 1`] = `
<div>
  <div
    class="space-y-4 h-full flex flex-col"
  >
    <div>
      <h2
        class="text-2xl font-bold mb-2 text-gray-900"
      >
        Review Generated Draft
      </h2>
      <p
        class="text-gray-600"
      >
        Review and edit the generated draft. You can save it to your case files when ready.
      </p>
    </div>
    <div
      class="flex-1 min-h-[400px]"
    >
      <textarea
        class="w-full h-full px-4 py-3 rounded-lg border font-mono text-sm border-gray-200 bg-white text-gray-900 focus:ring-2 focus:ring-blue-500 focus:border-transparent placeholder:text-slate-400 dark:placeholder:text-slate-500"
        placeholder="Draft content will appear here"
      />
    </div>
    <div
      class="flex-1 flex items-center justify-center border-2 border-dashed rounded-lg border-gray-200"
    >
      <div
        class="text-center py-12"
      >
        <span
          class="w-12 h-12 mx-auto mb-4 text-gray-500"
          data-testid="icon-sparkles"
        />
        <p
          class="text-lg font-medium text-gray-600"
        >
          Waiting for content generation...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step3DraftReview Component Snapshots should match snapshot for saving state 1`] = `
<div>
  <div
    class="space-y-4 h-full flex flex-col"
  >
    <div>
      <h2
        class="text-2xl font-bold mb-2 text-gray-900"
      >
        Review Generated Draft
      </h2>
      <p
        class="text-gray-600"
      >
        Review and edit the generated draft. You can save it to your case files when ready.
      </p>
    </div>
    <div
      class="flex-1 min-h-[400px]"
    >
      <textarea
        class="w-full h-full px-4 py-3 rounded-lg border font-mono text-sm border-gray-200 bg-white text-gray-900 focus:ring-2 focus:ring-blue-500 focus:border-transparent placeholder:text-slate-400 dark:placeholder:text-slate-500"
        placeholder="Draft content will appear here"
      >
        MOTION TO DISMISS

Comes now the Defendant, by and through undersigned counsel, and moves this Honorable Court to dismiss the Plaintiff's Complaint for failure to state a claim upon which relief can be granted.

LEGAL ARGUMENT

1. The Complaint fails to allege sufficient facts to support a claim for breach of contract.
2. The statute of limitations has expired on all claims asserted.

WHEREFORE, Defendant respectfully requests that this Court grant this Motion and dismiss the Complaint with prejudice.
      </textarea>
    </div>
    <div
      class="p-3 rounded-lg border bg-green-50 dark:bg-green-950/20 border-green-200 dark:border-green-800"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="w-5 h-5 text-green-600 dark:text-green-400"
          data-testid="icon-check-circle"
        />
        <span
          class="text-sm font-medium text-gray-900"
        >
          Draft complete! 
          506
           characters generated.
        </span>
      </div>
    </div>
    <div
      class="flex gap-3 pt-4 border-t border-gray-200"
    >
      <button
        class="px-4 py-2 rounded-lg border transition-colors border-gray-200 bg-gray-50 hover:bg-slate-100 dark:hover:bg-slate-800 flex items-center gap-2"
      >
        <span
          class="w-4 h-4"
          data-testid="icon-copy"
        />
        <span
          class="text-gray-900"
        >
          Copy
        </span>
      </button>
      <button
        class="px-4 py-2 rounded-lg border transition-colors border-gray-200 bg-gray-50 hover:bg-slate-100 dark:hover:bg-slate-800 flex items-center gap-2"
      >
        <span
          class="w-4 h-4"
          data-testid="icon-download"
        />
        <span
          class="text-gray-900"
        >
          Download
        </span>
      </button>
      <button
        class="flex-1 px-6 py-2 rounded-lg font-semibold transition-all flex items-center justify-center gap-2 bg-slate-400 dark:bg-slate-600 cursor-not-allowed"
        disabled=""
      >
        <span
          class="w-5 h-5 animate-spin"
          data-testid="icon-loader"
        />
        Saving...
      </button>
    </div>
  </div>
</div>
`;

exports[`Step3DraftReview Component Snapshots should match snapshot for streaming state 1`] = `
<div>
  <div
    class="space-y-4 h-full flex flex-col"
  >
    <div>
      <h2
        class="text-2xl font-bold mb-2 text-gray-900"
      >
        Generating Draft...
      </h2>
      <p
        class="text-gray-600"
      >
        AI is composing your document in real-time. This may take a moment.
      </p>
    </div>
    <div
      class="p-3 rounded-lg border flex items-center gap-3 bg-blue-50 dark:bg-blue-950/20 border-blue-200 dark:border-blue-800"
    >
      <span
        class="w-5 h-5 animate-spin text-blue-600 dark:text-blue-400"
        data-testid="icon-loader"
      />
      <span
        class="text-sm font-medium text-gray-900"
      >
        AI is writing... 
        21
         characters generated
      </span>
    </div>
    <div
      class="flex-1 min-h-[400px]"
    >
      <textarea
        class="w-full h-full px-4 py-3 rounded-lg border font-mono text-sm border-gray-200 bg-white text-gray-900 focus:ring-2 focus:ring-blue-500 focus:border-transparent placeholder:text-slate-400 dark:placeholder:text-slate-500 animate-pulse"
        placeholder="Generating content..."
        readonly=""
      >
        Generating content...
      </textarea>
    </div>
  </div>
</div>
`;
